# name: test_create[uvloop-None]
  <class 'dict'> {
    'administrator': False,
    'b2c': None,
    'b2c_display_name': None,
    'b2c_family_name': None,
    'b2c_given_name': None,
    'b2c_oid': None,
    'force_reset': False,
    'groups': <class 'list'> [
    ],
    'handle': 'fred',
    'id': 'abc123',
    'last_password_change': '2015-10-06T20:00:00Z',
    'permissions': <class 'dict'> {
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    },
    'primary_group': None,
  }
---
# name: test_create[uvloop-None].1
  <class 'dict'> {
    '_id': 'abc123',
    'administrator': False,
    'force_reset': False,
    'groups': <class 'list'> [
    ],
    'handle': 'fred',
    'invalidate_sessions': False,
    'last_password_change': datetime.datetime(2015, 10, 6, 20, 0),
    'permissions': <class 'dict'> {
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    },
    'primary_group': None,
    'settings': <class 'dict'> {
      'quick_analyze_workflow': 'pathoscope_bowtie',
      'show_ids': True,
      'show_versions': True,
      'skip_quick_analyze_dialog': True,
    },
  }
---
# name: test_edit[uvloop-good]
  <class 'tuple'> (
    200,
    <class 'dict'> {
      'administrator': False,
      'b2c': None,
      'b2c_display_name': None,
      'b2c_family_name': None,
      'b2c_given_name': None,
      'b2c_oid': None,
      'force_reset': True,
      'groups': <class 'list'> [
        <class 'dict'> {
          'id': 'technicians',
        },
      ],
      'handle': 'fred',
      'id': 'bob',
      'last_password_change': '2015-10-06T20:00:00Z',
      'permissions': <class 'dict'> {
        'cancel_job': False,
        'create_ref': False,
        'create_sample': False,
        'modify_hmm': False,
        'modify_subtraction': False,
        'remove_file': False,
        'remove_job': False,
        'upload_file': False,
      },
      'primary_group': <class 'dict'> {
        'id': 'technicians',
      },
    },
  )
---
# name: test_edit[uvloop-good_add_group]
  <class 'tuple'> (
    200,
    <class 'dict'> {
      'administrator': False,
      'b2c': None,
      'b2c_display_name': None,
      'b2c_family_name': None,
      'b2c_given_name': None,
      'b2c_oid': None,
      'force_reset': False,
      'groups': <class 'list'> [
        <class 'dict'> {
          'id': 'managers',
        },
        <class 'dict'> {
          'id': 'technicians',
        },
      ],
      'handle': 'fred',
      'id': 'bob',
      'last_password_change': '2015-10-06T20:00:00Z',
      'permissions': <class 'dict'> {
        'cancel_job': False,
        'create_ref': True,
        'create_sample': True,
        'modify_hmm': False,
        'modify_subtraction': False,
        'remove_file': False,
        'remove_job': False,
        'upload_file': False,
      },
      'primary_group': None,
    },
  )
---
# name: test_edit[uvloop-nonexistent_primary_group]
  <class 'tuple'> (
    400,
    <class 'dict'> {
      'id': 'bad_request',
      'message': 'Non-existent group: directors',
    },
  )
---
# name: test_edit[uvloop-nonmember_primary_group]
  <class 'tuple'> (
    400,
    <class 'dict'> {
      'id': 'bad_request',
      'message': 'User is not member of group',
    },
  )
---
# name: test_edit[uvloop-short_password]
  <class 'tuple'> (
    400,
    <class 'dict'> {
      'id': 'bad_request',
      'message': 'Password does not meet minimum length requirement (8)',
    },
  )
---
# name: test_edit_404[uvloop]
  <class 'tuple'> (
    404,
    <class 'dict'> {
      'id': 'not_found',
      'message': 'User does not exist',
    },
  )
---
# name: test_find[uvloop]
  <class 'dict'> {
    'documents': <class 'list'> [
      <class 'dict'> {
        'administrator': False,
        'force_reset': False,
        'groups': <class 'list'> [
        ],
        'handle': 'bar',
        'id': 'foo',
        'last_password_change': '2015-10-06T20:00:00Z',
        'permissions': <class 'dict'> {
          'cancel_job': False,
          'create_ref': False,
          'create_sample': False,
          'modify_hmm': False,
          'modify_subtraction': False,
          'remove_file': False,
          'remove_job': False,
          'upload_file': False,
        },
        'primary_group': 'technician',
      },
      <class 'dict'> {
        'administrator': False,
        'force_reset': False,
        'groups': <class 'list'> [
        ],
        'handle': 'baz',
        'id': 'bar',
        'last_password_change': '2015-10-06T20:00:00Z',
        'permissions': <class 'dict'> {
          'cancel_job': False,
          'create_ref': False,
          'create_sample': False,
          'modify_hmm': False,
          'modify_subtraction': False,
          'remove_file': False,
          'remove_job': False,
          'upload_file': False,
        },
        'primary_group': 'technician',
      },
      <class 'dict'> {
        'administrator': True,
        'force_reset': False,
        'groups': <class 'list'> [
        ],
        'handle': 'bob',
        'id': 'test',
        'last_password_change': '2015-10-06T20:00:00Z',
        'permissions': <class 'dict'> {
          'cancel_job': False,
          'create_ref': False,
          'create_sample': True,
          'modify_hmm': False,
          'modify_subtraction': False,
          'remove_file': False,
          'remove_job': False,
          'upload_file': False,
        },
        'primary_group': 'technician',
      },
    ],
    'found_count': 3,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 3,
  }
---
# name: test_get[uvloop-None]
  <class 'dict'> {
    'administrator': False,
    'b2c': None,
    'b2c_display_name': None,
    'b2c_family_name': None,
    'b2c_given_name': None,
    'b2c_oid': None,
    'force_reset': False,
    'groups': <class 'list'> [
      <class 'dict'> {
        'id': 'technician',
      },
    ],
    'handle': 'baz',
    'id': 'bar',
    'last_password_change': '2015-10-06T20:00:00Z',
    'permissions': <class 'dict'> {
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    },
    'primary_group': <class 'dict'> {
      'id': 'technician',
    },
  }
---
